--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 
 {% block body %}
       <h1>Наша компанія</h1>
+      <div>
     <p><a href="/add_new_emp">Додати нового співробітника</a></p>
     <p><a href="/add_new_dep">Додати новий підрозділ</a></p>
     <p><a href="/add_new_pos">Додати нову вакансію</a></p>
@@ -18,5 +19,5 @@
     <p><a href="/add_report_card">Додати інформацію про роботу співробітника за день</a></p>
     <p><a href="/add_result_card">Розрахувати зарплату співробітника за цей місяць</a></p>
     <p><a href="/update_report_card">Поновити інформацію про роботу співробітника за день</a></p>
-    <p><a href="/update_result_card">Пере розрахувати зарплату співробітника за цей місяць</a></p>
+    <p><a href="/update_result_card">Пере розрахувати зарплату співробітника за цей місяць</a></p></div>
 {% endblock %}
